objects/SA_Audit__Reports_History_Tracking__c.object
<CustomObject>
    <fields>
        <fullName>SA_Audit__JSON1__c</fullName>
        <description>Field to Reports History in JSON Format.</description>
        <label>JSON1</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SA_Audit__JSON2__c</fullName>
        <label>JSON2</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SA_Audit__JSON3__c</fullName>
        <label>JSON3</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SA_Audit__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ArchivedReports</fullName>
                </value>
                <value>
                    <fullName>UnarchivedReports</fullName>
                </value>
                <value>
                    <fullName>ReportsCount</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Reports History Tracking</label>
    <listViews>
        <fullName>SA_Audit__All</fullName>
        <columns>NAME</columns>
        <columns>SA_Audit__JSON1__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>SA_Audit__Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Reports History Tracking Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reports History Trackings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>